[package]
name = "isis-eps-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
bincode = "1.0"
failure = "0.1.2"
cubeos-error = { git = "ssh://git@github.com/Cube-OS/cubeos-error.git"}
rust-i2c = { git = "ssh://git@github.com/Cube-OS/rust-i2c.git" }
strum = "0.24"
strum_macros = "0.24"