[package]
name = "isis-eps-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
bincode = "1.0"
failure = "0.1.2"
cubeos-service = { git = "ssh://git@github.com/Cube-OS/cubeos-service.git", features=["api"]}
i2c-rs = { git = "ssh://git@github.com/Cube-OS/i2c-rs.git" }
strum = "0.24"
strum_macros = "0.24"
